Attribute convert between data types shows in multiple columns in spreadsheet #87434

Closed
opened 2021-04-12 17:13:01 +02:00 by Simon Thommes · 4 comments
Member

System Information
Operating system: Linux-5.8.0-7630-generic-x86_64-with-glibc2.32 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-12 07:18, hash: 175c1382da
Worked: unknown

Short description of error
When using the attribute convert node to convert from a vector to e.g. a boolean type the number of columns in the spreadsheet that this attribute is displayed in varies depending on the type that was last selected before boolean.
attr_convert_columns-2021-04-12_17.07.37.mp4

Exact steps for others to reproduce the error
See video/file:
attr_convert_columns.blend

**System Information** Operating system: Linux-5.8.0-7630-generic-x86_64-with-glibc2.32 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-12 07:18, hash: `175c1382da` Worked: unknown **Short description of error** When using the attribute convert node to convert from a vector to e.g. a boolean type the number of columns in the spreadsheet that this attribute is displayed in varies depending on the type that was last selected before boolean. [attr_convert_columns-2021-04-12_17.07.37.mp4](https://archive.blender.org/developer/F9930620/attr_convert_columns-2021-04-12_17.07.37.mp4) **Exact steps for others to reproduce the error** See video/file: [attr_convert_columns.blend](https://archive.blender.org/developer/F9930621/attr_convert_columns.blend)
Author
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 5c067189e3

This issue was referenced by 5c067189e3d8e648ae2900032860c3513827939a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-04-15 13:19:59 +02:00
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#87434
No description provided.