Fix T87434: spreadsheet shows same column more than once